# imx-smw

./: .check-style.ignore  .checkpatch.conf  .checkpatch.ignore  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  SW-Content-Register.txt
Documentations/: CMakeLists.txt
Documentations/user_guide/: user_guide.md
core/: CMakeLists.txt
core/config/: CMakeLists.txt  aead.c  aead_debug.c  cipher.c  cipher_debug.c  common.h  config.c  database.c  database.h  database_debug.c  device.c  entry.c  hash.c  hash_debug.c  hmac.c  hmac_debug.c  keymgr.c  keymgr_debug.c  mac.c  mac_debug.c  operations_apis.h.in  parser.c  parser_psa_alt.c  rng.c  rng_debug.c  sign_verify.c  sign_verify_debug.c  storage.c  storage_debug.c  subsystems_apis.h.in  tag.c  tag.h
core/crypto/: CMakeLists.txt  aead.c  cipher.c  crypto_weak.c  hash.c  hmac.c  mac.c  operation_context.c  rng.c  sign_verify.c
core/devmgr/: CMakeLists.txt  attestation.c  devmgr.c  devmgr_weak.c  lifecycle.c  lifecycle_weak.c
core/inc/: aead.h  attr.h  base64.h  cipher.h  compiler.h  config.h  constants.h  crypto.h  debug.h  devmgr.h  exec.h  global.h  hash.h  hmac.h  info.h.in  keymgr.h  keymgr_db.h  keymgr_derive.h  list.h  mac.h  name.h  object.h  object_db.h  operation_context.h  operations.h.in  rng.h  sign_verify.h  storage.h  subsystems.h.in  tlv.h  tlv_strings.h  utils.h
core/init/: CMakeLists.txt  init.c
core/keymgr/: CMakeLists.txt  keymgr.c  keymgr_db.c  keymgr_derive.c  keymgr_weak.c
core/psa/: CMakeLists.txt  asn1.c  asn1.h  common.c  common.h  crypto.c  initial_attestation.c  internal_trusted_storage.c  keymgr.c  keymgr.h  protected_storage.c  util_status.c  util_status.h
core/storage/: CMakeLists.txt  storage.c  storage_weak.c
core/subsystems/: CMakeLists.txt
core/utils/: CMakeLists.txt  aead.c  attr.c  base64.c  cipher.c  common.h  exec.c  hash.c  info.c  list.c  list_debug.c  mac.c  name.c  object.c  object_db.c  tlv.c
osal/: CMakeLists.txt
osal/etc/: default_config.txt
osal/linux/: CMakeLists.txt  compiler.h  key_db.c  local.h  obj_db.c  osal.c  osal.h  osal_debug.c  osal_debug.h  osal_trace.c
pkcs11/: CMakeLists.txt
pkcs11/import/: .clang-format  pkcs11t.h
pkcs11/src/: CMakeLists.txt  decrypt.c  digest.c  dualfunc.c  encrypt.c  entry.c  get_info.c  key.c  lib_cipher.c  lib_context.c  lib_device.c  lib_mutex.c  lib_opctx.c  lib_session.c  lib_sign_verify.c  msg_decrypt.c  msg_encrypt.c  msg_sign.c  msg_verify.c  object.c  parallel_func.c  random.c  session.c  sign.c  slot_token.c  trace.c  util.c  verify.c
pkcs11/tests/: CMakeLists.txt  callback.c  ckr_enum.c  digest.c  encrypt_decrypt.c  encrypt_decrypt_multipart.c  entry.c  find.c  get_info.c  main.c  object.c  object_key_cipher.c  object_key_ec.c  object_key_rsa.c  os_mutex.c  parallel.c  random.c  session.c  sign_verify.c  slot_token.c  test_check.c  util.c  util_asn1.c  util_lib.c  util_multi_process.c  util_session.c
tests/: CMakeLists.txt  README.md  README.txt
tests/cmake/: api_tests.cmake  const_to_string.cmake  ele_tests.cmake  enum_to_string.cmake  hsm_tests.cmake  hsmtee_tests.cmake  psa_tests.cmake  tee_tests.cmake  utils.cmake
tests/config/: api_config.txt  config_key_size_range_defined_twice.txt  config_key_size_range_defined_without_key_type.txt  config_key_size_range_unknown.txt  config_load_method_defined_twice.txt  config_load_method_no_semicolon.txt  config_load_method_omitted.txt  config_load_method_twice.txt  config_load_method_unknown.txt  config_no_operation.txt  config_no_subsystem.txt  config_operation_defined_twice.txt  config_operation_name_missing.txt  config_operation_name_twice.txt  config_operation_name_unknown.txt  config_operation_no_semicolon.txt  config_operation_tag_invalid.txt  config_operation_tag_missing.txt  config_operation_unknown.txt  config_parameter_name_missing.txt  config_parameter_no_semicolon.txt  config_parameter_range_max_too_large.txt  config_parameter_range_min_too_large.txt  config_parameter_range_no_colon.txt  config_parameter_range_no_semicolon.txt  config_parameter_unknown.txt  config_parameter_value_unknown.txt  config_psa_alt_invalid.txt  config_psa_default.txt  config_psa_default_after_subsystem.txt  config_psa_default_alt.txt  config_psa_default_before_version.txt  config_psa_default_no_semicolon.txt  config_psa_default_value_unknown.txt  config_psa_tag_invalid.txt  config_select_subsystem.txt  config_subsystem_defined_twice.txt  config_subsystem_name_missing.txt  config_subsystem_name_twice.txt  config_subsystem_no_semicolon.txt  (+12 more)
tests/engine/: cipher.c  config.c  crypto.c  hash.c  hmac.c  info.c  keymgr.c  keymgr_derive.c  mac.c  main.c  operation_context.c  rng.c  run.c  run_app.c  run_thread.c  sign_verify.c  test_engine.c  util.c  util_app.c  util_cipher.c  util_cond.c  util_context.c  util_debug.c  util_file.c  util_ipc.c  util_key.c  util_list.c  util_log.c  util_mac.c  util_mutex.c  util_rtcwake.c  util_sem.c  util_sign.c  util_status.c.in  util_thread.c  util_tlv.c
tests/lava/: README.md  code_coverage.yaml  smw_ctest.yaml  smw_package.yaml  smw_setup.yaml
tests/psa/: CMakeLists.txt  main.c  psa_arch_tests.h
tests/scripts/: run_keymgr_suspend_resume.sh.in  run_psa_test.sh.in  run_simple_test.sh.in  suspend_resume.sh  test3.sh
tests/tee/: CMakeLists.txt  common
tests/test_definition/: F_ELE_Generate_001.1.json  F_ELE_Generate_001.2.json  F_ELE_Generate_002.json  F_ELE_Keymgr_001.1.json  F_ELE_Keymgr_001.2.json  F_ELE_Thread_001.json  F_ELE_Thread_002.json  F_HSMTEE_Cipher_001.json  F_HSMTEE_Cipher_Multipart_001.json  F_HSMTEE_Config_001.json  F_HSM_Keymgr_001.1.json  F_HSM_Keymgr_001.2.json  F_HSM_TLS_001.json  F_HSM_Thread_001.json  F_HSM_Thread_002.json  F_PSA_Keymgr_001.1.json  F_PSA_Keymgr_001.2.json  F_TEE_App_001.json  F_TEE_App_002.json  F_TEE_Generate_001.json  F_TEE_Keymgr_001.json  F_TEE_Keymgr_002.json  F_TEE_Keymgr_003.json  F_TEE_Keymgr_004.1.json  F_TEE_Keymgr_004.2.json  F_TEE_Keymgr_005.1.json  F_TEE_Keymgr_005.2.json  F_TEE_Thread_001.json  F_TEE_Thread_002.json  U_API_Aead_001.json  U_API_Aead_002.json  U_API_Aead_Multipart_001.json  (+122 more)
(+452 files in other folders)
